# minishell

./: CMakeLists.txt  README.md  minishell.py  tests.txt
includes/: biltins.h  builtin.h  clean.h  environment.h  error.h  exec_stmnt.h  exit_shell.h  expansions.h  minishell.h  parser.h  redirect.h  signal_dispose.h  syntax.h
libft/: CMakeLists.txt  Makefile  ft_atoi.c  ft_atoi_base.c  ft_dsplit.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdel_empty.c  ft_lstdelone.c  ft_lstins_few_empty.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_split_utils.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+5 more)
libft/ft_dlst/: ft_dlst.c  ft_dlst.h  ft_dlst_two.c
srcs/: Makefile  clean_utils.c  commands.py  constants.py  debug.c  environment.c  error.c  exec_line.c  exit_shell.c  expansions.py  filename_expansion.py  minishell.py  quote_removal.py  redirect.c  signal_dispose.c  tokens.py  utils.py
srcs/builtin/: biltins.c  biltins.h  built_cd.c  built_exit.c  built_export.c  echo.c  exec_builtin.c  exit_shell.c  export.c
srcs/environment/: environment.c  environment_utils.c  get_hash_get_array.c  set_key_value.c  set_value_get_value.c
srcs/exec_stmnt/: exec_builtin.c  exec_stmnt.c  exec_stmnt_utils.c  ft_which.c  get_args.c
srcs/expansions/: Makefile  exec_variable_expansion.c  exp_args.c  filename.c  filename_utils.c  make_substitution.c  quote_removal.c  variable.c  variable_utils.c
srcs/parser/: cmd.c  parenthesis.c  parser.c  parser_utils.c  redir.c  subshell.c
srcs/redirect/: redirect.c  redirect_utils.c  try_openfiles.c
srcs/reserve/: builtin.h  exit_shell.c
srcs/syntax/: Makefile  quoting.c  syntax_utils.c  token_utils.c  tokens.c
srcs_parser/: CMakeLists.txt  Makefile  clean.c  clean.h  clean_utils.c  cmd.c  debug.c  environment.c  environment.h  errors.h  exec_line.c  expansions.c  minishell.h  opers.c  parser.c  parser.h  parser_utils.c  redir.c  subshell.c  syntax.c  syntax.h  syntax_utils.c  syntax_write.c  token_utils.c  tokens.c  variable.c
tests/: CMakeLists.txt  get_tokens_tests.cpp  quote_removal.cpp  test1.cpp  test_quote_removal.cpp  tests.hpp  tests2.cpp  tests_var_exp.cpp
